# ra2sophon

./: .gitignore  README.md  pyproject.toml
src/ra2_agent/: __init__.py  __main__.py  controller.py  main.py  monitor.py  offsets.py  probe.py  reader.py  type_stats.py
src/ra2_agent/cli/: __init__.py  main.py  probe.py
src/ra2_agent/controller/: __init__.py  sidebar.py
src/ra2_agent/display/: __init__.py
src/ra2sophon/: __init__.py  __main__.py
src/ra2sophon/cli/: main.py  monitor.py  overlay.py
src/ra2sophon/controller/: input.py
src/ra2sophon/data/: overlay.toml  unitdefs.json
src/ra2sophon/display/: format.py
src/ra2sophon/memory/: __init__.py  objects.py  offsets.py  reader.py  types.py  unitdefs.py
