[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ra2sophon"
version = "0.1.0"
description = "AI agent for Red Alert 2: Yuri's Revenge"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydirectinput>=1.0.4",
    "pymem>=1.14.0",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.hatch.build.targets.wheel]
packages = ["src/ra2sophon"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
